# GaiaLogService

./: .gitignore  GaiaLogService.sln  README.md
GaiaLogClient/: GaiaLogClient.csproj  LogClient.cs
GaiaLogModule/: LogRecorder.cs
GaiaLogServer/: GaiaLogServer.csproj  Launcher.cs
Native/: CMakeLists.txt
Native/GaiaLogClient/: CMakeLists.txt  GaiaLogClient.hpp  LogClient.cpp  LogClient.hpp  LogRecorder.cpp  LogRecorder.hpp
